# de-zoomcamp

./: .gitignore  dockerfile  pyproject.toml
WK2homeworkkestra/: docker-compose.yaml  foreach_ny_taxi.yaml  ny_taxi_etl.yaml
WK3HWDatawarehouse/: External_Table.sql  Materialized_Table_Non_Partition.sql  Partitioned_Clustered.sql  Vendor_Basedon_dropoffdate.sql  create_gcp_objects.yaml  foreach_ny_taxi.yaml  load_taxi_data_to_gcs.yaml  set_kv_gcp.yaml
WK4HWDataAnalytics/: create_gcp_objects.yaml  foreach_ny_taxi.yaml  load_taxi_data_to_gcs_gbq.yaml  set_kv_gcp.yaml
WK4HWDataAnalytics/taxi_rides_ny/: dbt_project.yml
WK4HWDataAnalytics/taxi_rides_ny/models/staging/: schema.yml  stg_green_tripdata.sql
WK5HOMEWKBATCH/: main.py  pyproject.toml
WK5HOMEWKBATCH/.ipynb_checkpoints/: homework-checkpoint.ipynb
WK5HOMEWKBATCH/notebook/: Untitled.ipynb
WK7HWSTREAM/: Dockerfile.flink  docker-compose.yaml  pyproject.toml
WK7HWSTREAM/src/jobs/: aggregation_job.py  pass_through_job.py  session_aggregation_job.py  tip_aggregation_job.py
WK7HWSTREAM/src/producers/: models.py  producer.py
dlt_2026/cohorts/2026/workshops/dlt/: dlt_Pipeline_Overview.ipynb
dltworkshop/: .cursorignore  PaidByCreditCard.py  StartDateEndDate.py  TotalAmountTip.py  taxi_pipeline.duckdb  taxi_pipeline.py  taxi_pipeline_pipeline.py
models/staging/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
pipeline/: .gitignore  Untitled.ipynb
terraform/: .gitignore  main without variable.txt  main.tf  variables.tf
wk1homeworkpl/: Home Work Screenshot.md  greentripzone_ingest_data.py
