[project]
name = "wk7homewkstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "kafka-python>=2.3.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyflink>=1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
